bugfix overflowx y box sizing

--- a/src/_normalizar.scss
+++ b/src/_normalizar.scss
@@ -4,17 +4,19 @@ html {
   text-rendering: optimizeLegibility;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  box-sizing: border-box !important;
+  overflow-x: hidden !important;
 }
 
 body {
-  box-sizing: border-box;
+  box-sizing: border-box !important;
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 body * {
-  box-sizing: border-box;
+  box-sizing: border-box !important;
 }
 
 main {
